--- a/React/0.기초강의/1-7. Hooks/1-7. Hooks.html
+++ b/React/0.기초강의/1-7. Hooks/1-7. Hooks.html
@@ -23,14 +23,14 @@
             
         // 함수형 : setState 할 필요 없을 때 썼었음...
         // Hooks ? 이 함수 컴포넌트에 state와 ref 기능을 추가해준 것
-        const GuGudan = () => {
+        const GuGuDan = () => {
             // use로 시작되는게 hooks !
-            const [first, setFirst] = React.useSate(Math.ceil(Math.random() * 9));
-            const [second, setSecond] = React.useSate(Math.ceil(Math.random() * 9));
-            const [value, setValue] = React.useSate(Math.ceil(''));
-            const [result, setResult] = React.useSate(Math.ceil(''));
+            const [first, setFirst] = useState(Math.ceil(Math.random() * 9));
+            const [second, setSecond] = useState(Math.ceil(Math.random() * 9));
+            const [value, setValue] = useState('');
+            const [result, setResult] = useState('');
             // dom에 접근
-            const inputRef = React.useRef(null);
+            const inputRef = useRef(null);
 
             const onChangeInput = (e) => {
                 //setState가 없어짐
@@ -39,7 +39,7 @@
 
             const onSubmitForm = (e) => {
                 e.preventDefault();
-                if(parseInt(this.state.value) === this.state.first * this.state.second) {
+                if(parseInt(value) === first * second) {
                     setResult('정답 : ' +value);
                     setFirst( Math.ceil(Math.random() * 9));
                     setSecond( Math.ceil(Math.random() * 9));
@@ -52,17 +52,14 @@
                     inputRef.current.focus();
                 }
             };
-            
-            return <React.Fragment>
-                    <div> {first} 곱하기 {second} 는?</div>
-                    <form>
-                        <input ref={inputRef} onChange={onChangeInput} vlaue = {value}/>
-                        <button>입력</button>
-                    </form>
-                    <div id="result">{result}</div>
-                </React.FRagment>;
-        }
 
+            return<><div> {first} 곱하기 {second} 는?</div>
+            <form onSubmit = {onSubmitForm}>
+                <input ref={inputRef} onChange={onChangeInput} vlaue = {value}/>
+                <button>입력</button>
+            </form>
+            <div id="result">{result}</div></>;
+        }
 
     </script>
 
